# pemsa

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  get_git_commit.cmd  get_git_commit.sh  todo.md
.github/workflows/: c-cpp.yml
carts/: test.p8
cmake/: FindLua52.cmake
include/pemsa/: githash.h  pemsa.hpp  pemsa_backend.hpp  pemsa_emulator.hpp  pemsa_module.hpp  pemsa_predefines.hpp  pemsa_util.hpp
include/pemsa/audio/: pemsa_audio_backend.hpp  pemsa_audio_channel.hpp  pemsa_audio_module.hpp  pemsa_wave_functions.hpp
include/pemsa/cart/: pemsa_cartridge.hpp  pemsa_cartridge_module.hpp  pemsa_cases.hpp  pemsa_emitter.hpp  pemsa_scanner.hpp
include/pemsa/graphics/: pemsa_graphics_backend.hpp  pemsa_graphics_module.hpp
include/pemsa/input/: pemsa_input_backend.hpp  pemsa_input_module.hpp
include/pemsa/memory/: pemsa_draw_state_module.hpp  pemsa_memory_module.hpp
include/pemsa/util/: pemsa_font.hpp  pemsa_util.hpp
include/sdl/: sdl_audio_backend.hpp  sdl_controller_db.hpp  sdl_controller_db_android.hpp  sdl_controller_db_ios.hpp  sdl_controller_db_linux.hpp  sdl_controller_db_mac.hpp  sdl_controller_db_windows.hpp  sdl_graphics_backend.hpp  sdl_input_backend.hpp
libs/fixmath/: CMakeLists.txt  fix16.c  fix16.h  fix16_sqrt.c  fix16_str.c
libs/lua/: CMakeLists.txt  lauxlib.c  lcode.c  lcode.h  lctype.h  liolib.c  llex.c  llimits.h  lmathlib.c  lobject.c  lopcodes.h  lparser.c  lstrlib.c  ltable.c  ltablib.c  ltm.c  ltm.h  lua.hpp  luaconf.h  lualib.h  lvm.c  lvm.h  strtofix16.c  strtofix16.h
src/pemsa/: pemsa_backend.cpp  pemsa_emulator.cpp  pemsa_module.cpp
src/pemsa/audio/: pemsa_audio_api.cpp  pemsa_audio_channel.cpp  pemsa_audio_module.cpp  pemsa_wave_functions.cpp
src/pemsa/cart/: pemsa_cartridge_api.cpp  pemsa_cartridge_module.cpp  pemsa_emitter.cpp  pemsa_scanner.cpp
src/pemsa/graphics/: pemsa_graphics_api.cpp  pemsa_graphics_module.cpp
src/pemsa/input/: pemsa_input_api.cpp  pemsa_input_module.cpp
src/pemsa/memory/: pemsa_draw_state_api.cpp  pemsa_draw_state_module.cpp  pemsa_memory_api.cpp  pemsa_memory_module.cpp
src/pemsa/util/: pemsa_font.cpp  pemsa_math_api.cpp  pemsa_system_api.cpp  pemsa_util.cpp
src/sdl/: main.cpp  sdl_audio_backend.cpp  sdl_graphics_backend.cpp  sdl_input_backend.cpp
